简化商品管理：只保留分类/名称/单位/规格，移除价格/条码/保质期/图片等字段
- Product 实体：去掉 barcode/purchasePrice/salePrice/shelfLife/imageUrl/description
- ProductDTO：同步简化
- ProductService：移除条码生成、价格历史记录逻辑
- ProductRepository：移除 barcode 相关查询方法
- ProductController：移除价格历史、条码查询接口
- 删除 ProductPriceHistory 实体及 Repository
- Inventory 实体/DTO：移除 purchasePrice 字段
- InventoryRepository：库存资产统计改为按数量（不依赖采购价）
- InventoryService：移除 shelfLife 自动计算过期日逻辑
- SalesOrderItemRepository：利润查询成本固定为 0
- SQL：同步更新建表语句和测试数据

Co-authored-by: Cursor <cursoragent@cursor.com>